fix: Update descriptions and titles for clarity and consistency in evidence-based care content
- Revised text in English, Spanish, and Portuguese versions to enhance clarity and ensure consistent messaging regarding telehealth services.
- Adjusted descriptions for licensed healthcare professionals and evidence-based clinical protocols to better reflect the platform's standards and practices.
- Made minor formatting changes for improved readability across all language versions.

--- a/src/content/evidence-based-care/en.mdx
+++ b/src/content/evidence-based-care/en.mdx
@@ -1,27 +1,27 @@
 export const metadata = {
-  title: 'Evidence-Based Care | Clinical Excellence in Women\'s Health | Eleva Care',
+  title: "Evidence-Based Care | Clinical Excellence in Women's Health | Eleva Care",
   description:
-    'Discover how Eleva Care delivers evidence-based women\'s health care through telehealth. Backed by rigorous research, validated by 38+ meta-analyses, and proven in tens of thousands of patients.',
+    "Discover how Eleva Care delivers evidence-based women's health care through telehealth. Backed by rigorous research, validated by 38+ meta-analyses, and proven in tens of thousands of patients.",
   og: {
     title: 'Evidence-Based Care | Clinical Excellence | Eleva Care',
     description:
-      'Telehealth for women\'s health: safe, effective, and scientifically proven. Evidence from 44,894+ patients in clinical trials.',
+      "Telehealth for women's health: safe, effective, and scientifically proven. Evidence from 44,894+ patients in clinical trials.",
     siteName: 'Eleva Care',
   },
 };
 
-import { Separator } from '@/components/ui/separator';
-import HeadlineSection from '@/components/shared/text/HeadlineSection';
-import TextBlock from '@/components/shared/text/TextBlock';
 import {
+  ClinicalAreasSection,
+  FAQSection,
+  FinalCTASection,
   HeroSection,
   KeyNumbersSection,
-  ClinicalAreasSection,
-  SafetyQualitySection,
-  FAQSection,
   ResearchTeamSection,
-  FinalCTASection,
+  SafetyQualitySection,
 } from '@/components/sections/evidence-based-care';
+import HeadlineSection from '@/components/shared/text/HeadlineSection';
+import TextBlock from '@/components/shared/text/TextBlock';
+import { Separator } from '@/components/ui/separator';
 
 <HeroSection
   badge="Clinical Excellence"
@@ -138,7 +138,8 @@ import {
       title: 'Sexual & Reproductive Health',
       description:
         'Telemedicine models for contraceptive counselling and medication abortion have shown high effectiveness and safety—including very large cohorts for no-test telemedicine abortion with success rates ≈98–99% and very low serious adverse events. Telemedicine improves access, shortens wait times, and is highly acceptable to patients.',
-      keyFinding: '98-99% success rates with very low adverse events and high patient acceptability',
+      keyFinding:
+        '98-99% success rates with very low adverse events and high patient acceptability',
       research: [
         {
           title:
@@ -183,7 +184,7 @@ import {
       icon: 'user-check',
       title: 'Licensed Healthcare Professionals',
       description:
-        'Only licensed women\'s health clinicians provide teleconsultations. All experts are verified and maintain current credentials in their specialties.',
+        'Teleconsultations are delivered by independent, duly licensed clinicians who meet our onboarding requirements. You can review their credentials and professional background in their profile.',
     },
     {
       icon: 'lock',
@@ -195,7 +196,7 @@ import {
       icon: 'file-check',
       title: 'Evidence-Based Clinical Protocols',
       description:
-        'Clear clinical protocols based on international guidelines and peer-reviewed evidence. We follow published telemedicine protocols and escalate when needed.',
+        'The platform supports evidence-based practices aligned with international guidelines and peer-reviewed research. Experts maintain clinical independence and follow escalation pathways when appropriate.',
     },
     {
       icon: 'shield',
@@ -252,35 +253,39 @@ import {
       doi: '10.7326/M22-0737',
     },
     {
-      title: 'Mental health-related telemedicine interventions for pregnant women and new mothers: a systematic literature review',
+      title:
+        'Mental health-related telemedicine interventions for pregnant women and new mothers: a systematic literature review',
       authors: 'Stentzel U, Grabe HJ, Schmidt S, et al.',
       year: '2023',
       doi: '10.1186/s12888-023-04790-0',
     },
     {
-      title: 'Effectiveness of digital psychological interventions in reducing perinatal depression',
+      title:
+        'Effectiveness of digital psychological interventions in reducing perinatal depression',
       authors: 'Chen C, et al.',
       year: '2023',
       doi: 'PMC10212734',
     },
     {
-      title: 'Effectiveness, safety and acceptability of no-test medical abortion provided via telemedicine: a national cohort study',
+      title:
+        'Effectiveness, safety and acceptability of no-test medical abortion provided via telemedicine: a national cohort study',
       authors: 'Aiken ARA, Lohr PA, Lord J, Ghosh N, Starling J',
       year: '2021',
       doi: '10.1111/1471-0528.16668',
     },
     {
-      title: 'Safety and Efficacy of Telehealth Medication Abortions in the US During the COVID-19 Pandemic',
+      title:
+        'Safety and Efficacy of Telehealth Medication Abortions in the US During the COVID-19 Pandemic',
       authors: 'Upadhyay UD, Koenig LR, Meckstroth KR',
       year: '2021',
       doi: '10.1001/jamanetworkopen.2021.22320',
     },
     {
-      title: 'The clinical effectiveness of telehealth: A systematic review of meta-analyses from 2010 to 2019',
+      title:
+        'The clinical effectiveness of telehealth: A systematic review of meta-analyses from 2010 to 2019',
       authors: 'Snoswell CL, Chelberg G, De Guzman KR, et al.',
       year: '2023',
       doi: '10.1177/1357633X211022907',
     },
   ]}
 />
-
