--- a/src/content/evidence-based-care/es.mdx
+++ b/src/content/evidence-based-care/es.mdx
@@ -186,7 +186,7 @@ import {
       icon: 'user-check',
       title: 'Profesionales de la Salud Licenciados',
       description:
-        'Solo médicos de salud femenina licenciados proporcionan teleconsultas. Todos los expertos están verificados y mantienen credenciales actuales en sus especialidades.',
+        'Las teleconsultas son realizadas por clínicos independientes debidamente licenciados que cumplen nuestros requisitos de incorporación. Puede revisar sus credenciales y antecedentes profesionales en su perfil.',
     },
     {
       icon: 'lock',
@@ -198,7 +198,7 @@ import {
       icon: 'file-check',
       title: 'Protocolos Clínicos Basados en Evidencia',
       description:
-        'Protocolos clínicos claros basados en guías internacionales y evidencia revisada por pares. Seguimos protocolos de telemedicina publicados y escalamos cuando es necesario.',
+        'La plataforma apoya prácticas basadas en evidencia alineadas con guías internacionales e investigación revisada por pares. Los especialistas mantienen independencia clínica y siguen vías de escalada cuando corresponde.',
     },
     {
       icon: 'shield',
