--- a/src/content/evidence-based-care/pt-BR.mdx
+++ b/src/content/evidence-based-care/pt-BR.mdx
@@ -186,7 +186,7 @@ import {
       icon: 'user-check',
       title: 'Profissionais de Saúde Licenciados',
       description:
-        'Apenas médicos de saúde feminina licenciados fornecem teleconsultas. Todos os especialistas são verificados e mantêm credenciais atuais nas suas especialidades.',
+        'As teleconsultas são realizadas por clínicos independentes devidamente licenciados que cumprem nossos requisitos de integração. Você pode revisar suas credenciais e antecedentes profissionais no perfil.',
     },
     {
       icon: 'lock',
@@ -198,7 +198,7 @@ import {
       icon: 'file-check',
       title: 'Protocolos Clínicos Baseados em Evidência',
       description:
-        'Protocolos clínicos claros baseados em diretrizes internacionais e evidência revista por pares. Seguimos protocolos de telemedicina publicados e escalamos quando necessário.',
+        'A plataforma apoia práticas baseadas em evidência alinhadas com diretrizes internacionais e pesquisa revisada por pares. Os especialistas mantêm independência clínica e seguem vias de escalada quando apropriado.',
     },
     {
       icon: 'shield',
